# DNSNewtork-Intrusion-Detection-System

./: CMakeLists.txt  README.md  dns_readme.md
include/rules/: dns.h
nids_dns/: packet_capture.cpp
rules/protocols/: dns.rules
src/: entry.cpp
src/nids_dns/: detector.cpp  dns_parser.cpp  packet_capture.cpp  utils.cpp
